@@ -85,8 +85,8 @@ public:
 	void	AddFileLinkToDownload(class CED2KFileLink* pLink, uint8 category);
 	bool	IsFileExisting(const CMD4Hash& fileid) const;
 	bool	IsPartFile(const CKnownFile* totest) const;
-	CPartFile*	GetFileByID(const CMD4Hash& filehash) const;
-	CPartFile* GetFileByIndex(int idx) const;
+	CPartFile* GetFileByID(const CMD4Hash& filehash) const;
+	CPartFile* GetFileByIndex(unsigned int idx) const;
 	void    CheckAndAddSource(CPartFile* sender,CUpDownClient* source);
 	void    CheckAndAddKnownSource(CPartFile* sender,CUpDownClient* source);
 	// bool	RemoveSource(CUpDownClient* toremove, bool updatewindow = true);
@@ -128,7 +128,7 @@ public:
 	uint64	GetDownDataOverheadServerPackets()		{return m_nDownDataOverheadServerPackets;}
 	uint64	GetDownDataOverheadOtherPackets()		{return m_nDownDataOverheadOtherPackets;}
 	void	CompDownDatarateOverhead();
-	int	GetFileCount()					{return filelist.size();}
+	unsigned int GetFileCount()				{return filelist.size();}
 	void	ResetCatParts(int cat);
 	void	SavePartFiles(bool del = false);	// InterCeptor
 	void	SetCatPrio(int cat, uint8 newprio);
